fix: trả điểm khi public